--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.13.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "next": "^13.4.12",
@@ -23,12 +25,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "3.3.3",
+    "react-intersection-observer": "^9.5.2",
+    "react-scroll": "^1.8.9",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/nodemailer": "^6.4.8"
+    "@types/nodemailer": "^6.4.8",
+    "@types/react-scroll": "^1.8.7"
   }
 }
