--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://dhruvraj:IAMMAN@cluster0.usqi1il.mongodb.net/
+MONGO_URI=mongodb+srv://dhruvraj:HELLOPETER@cluster0.usqi1il.mongodb.net/test?retryWrites=true&w=majority
 TOKEN_SECRET=nextjstask
 DOMAIN=http://localhost:3000
